--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html public "-//w3c//DTD HTML4.0 Transional//EN">
+<html
+<head
+ <title 
+ <link rel="STYLESHEET"type="text/css" href="estilos.css">
+ <head
+ <body
+  Disciplina de Pensamento Computacional
+ <p>
+<table border="1" class="notas">
+<caption> Notas de 1999/2000</caption>
+<tr class="cabecalho">
+<th class="cabecalho<Aluno</th>
+<th class="cabecalho">Aluno</th>
+<th class="cabecalho">1ª Chamada</th>
+<th class="cabecalho">2ª Chamada</th>th>
+<th class="cabecalho">Final</th>th>
+</tr>
